About switching tne

--- a/src/main/resources/templates/Invoice-template.html
+++ b/src/main/resources/templates/Invoice-template.html
@@ -156,6 +156,7 @@
                             <p><b>Mobile :</b> <span th:text="${customer.getPhonenumber()}">customer@gmail.com</span></p>
                             <p><b>Email :</b> <span th:text="${customer.getEmail()}">customer@gmail.com</span></p>
                             <p><b>Address :</b> <span th:text="${customer.getAddress()}">New York, USA</span></p>
+                            <p><b>Address :</b> <span th:text="${customer.getAddress()}">New York, USA</span></p>
                             <p><b>Post Code :</b> <span th:text="${customer.getPostcode()}">N1</span></p>
                         </div>
                     </div>
